Made the api to be runnable on Docker, moved the secret variables into environment variables which are integrated into Docker container

--- a/LoyaltyApp/appsettings.json
+++ b/LoyaltyApp/appsettings.json
@@ -7,9 +7,5 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "LoyaltyAppContext": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = LoyaltyAppData",
-    "IdentityContext": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = IdentityUsers"
-  }
+  "AllowedHosts": "*"
 }
